force-app/main/default/objects/Price_List__c/fields/DB_SD_Margin__c.field-meta.xml
<CustomField>
    <fullName>DB_SD_Margin__c</fullName>
    <label>DB/SD Margin % (ZSD1)</label>
    <type>Percent</type>
    <precision>7</precision>
    <scale>3</scale>
</CustomField>