force-app/main/default/objects/Price_List__c/fields/Distributor_Type__c.field-meta.xml
<CustomField>
    <fullName>Distributor_Type__c</fullName>
    <label>Distributor Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value><fullName>DB-RT</fullName><default>false</default><label>DB-RT</label></value>
            <value><fullName>DB-M</fullName><default>false</default><label>DB-M</label></value>
            <value><fullName>DB-Wh</fullName><default>false</default><label>DB-Wh</label></value>
            <value><fullName>DB-SA</fullName><default>false</default><label>DB-SA</label></value>
            <value><fullName>DB-I</fullName><default>false</default><label>DB-I</label></value>
            <value><fullName>SS</fullName><default>false</default><label>SS</label></value>
            <value><fullName>SD</fullName><default>false</default><label>SD</label></value>
            <value><fullName>WS</fullName><default>false</default><label>WS</label></value>
            <value><fullName>MT</fullName><default>false</default><label>MT</label></value>
            <value><fullName>MT-Direct</fullName><default>false</default><label>MT-Direct</label></value>
            <value><fullName>INS</fullName><default>false</default><label>INS</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>