force-app/main/default/objects/Price_List__c/fields/Landing_Price__c.field-meta.xml
<CustomField>
    <fullName>Landing_Price__c</fullName>
    <label>Landing Price</label>
    <description>Computed SS landing price: RBP cascaded by ZSD1 then ZSD2 (BRD 10.1).</description>
    <formula>RBP_Price__c * (1 - (DB_SD_Margin__c / 100)) * (1 - (SS_Margin__c / 100))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <type>Currency</type>
    <precision>18</precision>
    <scale>2</scale>
</CustomField>