force-app/main/default/objects/Price_List__c/fields/Margin__c.field-meta.xml
<CustomField>
    <fullName>Margin__c</fullName>
    <label>Margin %</label>
    <type>Percent</type>
    <precision>7</precision>
    <scale>3</scale>
</CustomField>