force-app/main/default/objects/Price_List__c/fields/Outlet_Type__c.field-meta.xml
<CustomField>
    <fullName>Outlet_Type__c</fullName>
    <label>Outlet Type</label>
    <length>80</length>
    <type>Text</type>
</CustomField>