force-app/main/default/objects/Price_List__c/fields/Price_Level__c.field-meta.xml
<CustomField>
    <fullName>Price_Level__c</fullName>
    <label>Price Level</label>
    <description>Cascade level for the price tier (BRD 10.1-10.3).</description>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value><fullName>Distributor-Specific</fullName><default>false</default><label>Distributor-Specific</label></value>
            <value><fullName>State &amp; Channel</fullName><default>false</default><label>State &amp; Channel</label></value>
            <value><fullName>Channel</fullName><default>false</default><label>Channel</label></value>
            <value><fullName>Nation</fullName><default>false</default><label>Nation</label></value>
            <value><fullName>State</fullName><default>false</default><label>State</label></value>
            <value><fullName>Distributor-Type</fullName><default>false</default><label>Distributor-Type</label></value>
            <value><fullName>Outlet-Type</fullName><default>false</default><label>Outlet-Type</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>