force-app/main/default/objects/Price_List__c/fields/Price_Tier__c.field-meta.xml
<CustomField>
    <fullName>Price_Tier__c</fullName>
    <label>Price Tier</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value><fullName>P1 (SS/DB)</fullName><default>false</default><label>P1 (SS/DB)</label></value>
            <value><fullName>P2 (SD)</fullName><default>false</default><label>P2 (SD)</label></value>
            <value><fullName>Secondary (Retailer)</fullName><default>false</default><label>Secondary (Retailer)</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>