force-app/main/default/objects/Price_List__c/fields/RBP_Price__c.field-meta.xml
<CustomField>
    <fullName>RBP_Price__c</fullName>
    <label>RBP (ZPR0) Price</label>
    <type>Currency</type>
    <precision>18</precision>
    <scale>2</scale>
</CustomField>