force-app/main/default/objects/Price_List__c/fields/SS_Margin__c.field-meta.xml
<CustomField>
    <fullName>SS_Margin__c</fullName>
    <label>SS Margin % (ZSD2)</label>
    <type>Percent</type>
    <precision>7</precision>
    <scale>3</scale>
</CustomField>